Fix deform brush painting

Bring back some removed code from iteratorsNG porting
o provide sampledRawData in KisRandomSubAccessor

BUG:299701
FIXED-IN:2.5.2
REVIEW:106222